--- a/marketifythemes.html
+++ b/marketifythemes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<base href="/">
 <title>marketifythemes.com</title>
 <link rel="stylesheet" type="text/css" href="stylem.css">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
