--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 		<nav>
 		<div class="logo">INNOVATER</div>
 		<ul>
-		<li><a class="active" href="marketifythemes.html" style="text-decoration: none;">Home</li>
+		<li><a class="active" href="index.html" style="text-decoration: none;">Home</li>
         <li><a href="#"style="text-decoration: none;" >About</li>
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
         <li><a href="#"style="text-decoration: none;">News</li>
