--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <base href="/">
 <title>marketifythemes.com</title>
-<link rel="stylesheet" type="text/css" href="./stylem.css">
+<link rel="stylesheet" type="text/css" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 
 
