--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<base href="/">
 <title>marketifythemes.com</title>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 
 
@@ -17,7 +16,7 @@
         <li><a href="#"style="text-decoration: none;">News</li>
         <li><a href="#"style="text-decoration: none;">Contact</li></a>
 		    <p>© 2021 Nepal<br>Created by <a class="active" href="https://www.facebook.com/bixal456/">Bishal Thapa</a>
-		    <img class="active" src="./c.jpg" height="100" width="300"></div>
+		    <img class="active" src="c.jpg" height="100" width="300"></div>
 		</ul>
 		</nav>
 
