--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>marketifythemes.com</title>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 
 
