--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 		<nav>
 		<div class="logo">INNOVATER</div>
 		<ul>
-		<li><a class="active" href="index.html" style="text-decoration: none;">Home</li>
-        <li><a href="#"style="text-decoration: none;" >About</li>
+		<li><a  href="index.html" style="text-decoration: none;">Home</li>
+        <li><a class="active" href="#"style="text-decoration: none;" >About</li>
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
         <li><a href="#"style="text-decoration: none;">News</li>
         <li><a href="#"style="text-decoration: none;">Contact</li></a>
@@ -19,7 +19,7 @@
 		</ul>
 		</nav>
 
-		<p>I believe in work.And Over 5 years'🏅🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers🇳🇵🇳🇵.I am that 😊</p>
+		<p class="about">I believe in work and Over 5 years'🏅🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers.😊</p>
 
 			
 </head>
