--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
 <title>marketifythemes.com</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
-
-
+</head>
 <body>
 		<nav>
 		<div class="logo">INNOVATER</div>
@@ -15,13 +14,16 @@
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
         <li><a href="#"style="text-decoration: none;">News</li>
         <li><a href="#"style="text-decoration: none;">Contact</li></a>
-		   
+
 		</ul>
 		</nav>
 
-		<p class="about">I believe in work and Over 5 years'🏅🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers.😊</p>
+		<div> <img src="a.jpg" height="300" width="300">
+         <a>Birthday:  04.04.1999<br>Address:  Suddhodhan-1,Shishai Rupandehi,Nepal<br>Study:Univercity of Kathmandu<br>
+         </div>
+        <button class="learn"><a href="learn.html"style="text-decoration: none;">Learn More</button>
+     <p class="about" >HELLO,I believe in work and Over 5 years'🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers.😊</p>
 
-			
-</head>
+    
 </body>
 </html>
