--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<li><a class="active" href="" style="text-decoration: none;">Home</li>
         <li><a href="about.html"style="text-decoration: none;" >About</li>
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
-        <li><a href="#"style="text-decoration: none;">News</li>
+        <li><a href="news.html"style="text-decoration: none;">News</li>
         <li><a href="#"style="text-decoration: none;">Contact</li></a>
 		    <p>© 2021 Nepal<br>Created by <a class="active" href="https://www.facebook.com/bixal456/">Bishal Thapa</a>
 		    <img class="active" src="c.jpg" height="100" width="300"></div>
@@ -25,7 +25,7 @@
 			<div class="header">
 				
 				<h1>BISHAL THAPA</h1>
-				<p><a>𝗦𝘂𝗰𝗰𝗲𝘀𝘀 𝗶𝘀𝗻'𝘁 𝗱𝗶𝘀𝘁𝗶𝗻𝗮𝘁𝗶𝗼𝗻,<br>𝗦𝘂𝗰𝗰𝗲𝘀𝘀 𝗶𝘀 𝗮 𝗷𝗼𝘂𝗿𝗻𝗲𝘆.</a></p>
+				<p><a>𝗦𝘂𝗰𝗰𝗲𝘀𝘀 𝗶𝘀𝗻'𝘁 𝗱𝗶𝘀𝘁𝗶𝗻𝗮𝘁𝗶𝗼𝗻,<br>𝗦𝘂𝗰𝗰𝗲𝘀𝘀 𝗶𝘀 𝗮 𝗷𝗼𝘂𝗿𝗻𝗲𝘆.🙏🏻🙏🏻</a></p>
 	
 			</div>
 
