--- a/about.html
+++ b/about.html
@@ -12,17 +12,17 @@
 		<li><a  href="index.html" style="text-decoration: none;">Home</li>
         <li><a class="active" href="#"style="text-decoration: none;" >About</li>
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
-        <li><a href="#"style="text-decoration: none;">News</li>
-        <li><a href="#"style="text-decoration: none;">Contact</li></a>
+        <li><a href="https://www.ratopati.com/"style="text-decoration: none;">News</li>
+        <li><a href="contact.html"style="text-decoration: none;">Contact</li></a>
 
 		</ul>
 		</nav>
 
 		<div> <img src="a.jpg" height="300" width="300">
-         <a>Birthday:  04.04.1999<br>Address:  Suddhodhan-1,Shishai Rupandehi,Nepal<br>Study:Univercity of Kathmandu<br>
+         <a>Birthday:  04.04.1999<br>Address:    Suddhodhan-1,Shishai Rupandehi,Nepal<br>Study:    Univercity of Kathmandu<br>
          </div>
         <button class="learn"><a href="learn.html"style="text-decoration: none;">Learn More</button>
-     <p class="about" >HELLO,I believe in work and Over 5 years'🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers.😊</p>
+     <p class="about" >HELLO! I believe in work and Over 5 years'🏅experience working in both the public and private sectors. Diplomatic, personable, and adept at managing sensitive situations. Highly organized, self-motivated, and proficient with computers.😊</p>
 
     
 </body>
