--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<li><a class="active" href="" style="text-decoration: none;">Home</li>
         <li><a href="about.html"style="text-decoration: none;" >About</li>
         <li><a href="#"style="text-decoration: none;">Portfolio</li>
-        <li><a href="news.html"style="text-decoration: none;">News</li>
-        <li><a href="#"style="text-decoration: none;">Contact</li></a>
-		    <p>© 2021 Nepal<br>Created by <a class="active" href="https://www.facebook.com/bixal456/">Bishal Thapa</a>
+        <li><a href="https://www.ratopati.com/"style="text-decoration: none;">News</li>
+        <li><a href="contact.html"style="text-decoration: none;">Contact</li></a>
+		    <p>© 2021 Nepal<br>Created by <a class="active" href="https://www.facebook.com/bixal456/">Bishal Thapa</a><p>
 		    <img class="active" src="c.jpg" height="100" width="300"></div>
 		</ul>
 		</nav>
