--- a/news.html
+++ b/news.html
@@ -12,8 +12,8 @@
 		<li><a  href="index.html" style="text-decoration: none;">Home</li>
         <li><a  href="about.html"style="text-decoration: none;" >About</li>
         <li><a  href="#"style="text-decoration: none;">Portfolio</li>
-        <li><a class="active"href="https://www.ratopati.com/"style="text-decoration: none;">News</li>
-        <li><a href="#"style="text-decoration: none;">Contact</li></a>
+        <li><a class="active"  href="#"style="text-decoration: none;">News</li>
+        <li><a href="contact.html"style="text-decoration: none;">Contact</li></a>
 
 		</ul>
 		</nav>
