--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,10 +9,10 @@
 		<nav>
 		<div class="logo">INNOVATER</div>
 		<ul>
-		<li><a  href="index.html" style="text-decoration: none;">Home</li>
-        <li><a  href="about.html"style="text-decoration: none;" >About</li>
-        <li><a  href="abc.html"style="text-decoration: none;">Portfolio</li>
-        <li><a class="active"  href="#"style="text-decoration: none;">News</li>
+		<li><a class="active" href="" style="text-decoration: none;">Home</li>
+        <li><a href="about.html"style="text-decoration: none;" >About</li>
+        <li><a href="abc.html"style="text-decoration: none;">Portfolio</li>
+        <li><a href="https://www.ratopati.com/"style="text-decoration: none;">News</li>
         <li><a href="contact.html"style="text-decoration: none;">Contact</li></a>
 
 		</ul>
