--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<ul>
 		<li><a class="active" href="" style="text-decoration: none;">Home</li>
         <li><a href="about.html"style="text-decoration: none;" >About</li>
-        <li><a href="#"style="text-decoration: none;">Portfolio</li>
+        <li><a href="abc.html"style="text-decoration: none;">Portfolio</li>
         <li><a href="https://www.ratopati.com/"style="text-decoration: none;">News</li>
         <li><a href="contact.html"style="text-decoration: none;">Contact</li></a>
 		    <p>© 2021 Nepal<br>Created by <a class="active" href="https://www.facebook.com/bixal456/">Bishal Thapa</a><p>
