--- a/abc.html
+++ b/abc.html
@@ -37,7 +37,7 @@
       <span class="text"></span>
       <span class="numb"></span>
     </div>
-    <button class="close"><a href="index.html"style="text-decoration: none;">Closes</button>
+    <button class="close"><a href="index.html"style="text-decoration: none;">Done</button>
   </div>
 </body>
 </html>
